--- a/webscraper/templates/propertyInfo.html
+++ b/webscraper/templates/propertyInfo.html
@@ -77,7 +77,7 @@
 
                   <tr>
                      <td> Zip Code </td>
-                     <td>  </td>
+                     <td> {{ property_info.zipCode }} </td>
                   </tr>
 
                   <tr>
