--- a/webscraper/templates/database.html
+++ b/webscraper/templates/database.html
@@ -64,11 +64,11 @@
                   <label>Condition Rating
                      <select name='condition'>
                         <option> </option>
-                        <option value="Excellent"> Excellent </option>
-                        <option value="Good"> Good </option>
-                        <option value="Fair"> Fair </option>
-                        <option value="Poor"> Poor </option>
-                        <option value="Unsound"> Unsound </option>
+                        <option value="5"> Excellent </option>
+                        <option value="4"> Good </option>
+                        <option value="3"> Fair </option>
+                        <option value="2"> Poor </option>
+                        <option value="1"> Unsound </option>
                      </select>
                   </label>
                </div>
@@ -77,24 +77,24 @@
                   <label>Number Of Bedrooms
                      <select name='numBedrooms'>
                         <option> </option>
-                        <option value="1-2"> 1-2 </option>
-                        <option value="2-3"> 2-3 </option>
-                        <option value="3-4"> 3-4 </option>
-                        <option value="4-5"> 4-5 </option>
-                        <option value="More than 5"> More than 5 </option>
+                        <option value="1"> 1 </option>
+                        <option value="2"> 2 </option>
+                        <option value="3"> 3 </option>
+                        <option value="4"> 4 </option>
+                        <option value="5"> 5 Or More </option>
                      </select>
                   </label>
                </div>
 
                <div class="small-2 columns">
-                  <label>Year Built
-                     <select name='yearBuilt'>
+                  <label>Zip Code
+                     <select name='zipCode'>
                         <option> </option>
-                        <option value="Before 1950"> Before 1950 </option>
-                        <option value="1950-1970"> 1950-1970 </option>
-                        <option value="1971-1990"> 1971-1990 </option>
-                        <option value="1991-2010"> 1991-2010 </option>
-                        <option value="Newer than 2011"> Newer than 2011 </option>
+                        <!-- <option value=""> -->
+                           {% for object in zip_codes %}
+                              <option value="{{ object.zipCode }}">{{ object.zipCode }}</option>
+                           {% endfor %}
+                        <!-- </option> -->
                      </select>
                   </label>
                </div>
@@ -108,7 +108,6 @@
                         <option value="Condominium"> Condominium </option>
                         <option value="Manufactured/Mobile Home"> Manufactured/Mobile Home </option>
                         <option value="Multi-Family"> Multi-Family </option>
-                        <option value="Other"> Other </option>
                      </select>
                   </label>
                </div>
