download csv working

--- a/webscraper/templates/database.html
+++ b/webscraper/templates/database.html
@@ -146,8 +146,7 @@
       </div>
 
       <div align="left" class="small-4 columns">
-         <a href="/downloadLink/" download>Save Results</a>
-         <!-- <button class="button hollow" type="submit">Save Results</button> -->
+         <button class="button hollow"> <a href="/downloadLink/" download>Save Results</a> </button>
       </div>
 
    </div>
