scalable_map working

--- a/webscraper/templates/map.html
+++ b/webscraper/templates/map.html
@@ -57,8 +57,7 @@
    <br>
    <h4> Showing All Properties</h4>
 
-   <!-- <div class="show-for-small-only" id="map" style="height: 300px; width: 350px;"> </div> -->
-   <div id="map" style="height: 600px; width: 800px;"> </div>
+   <div class="scalable_map" id="map"> </div>
 
    <script>
       function initMap() {
