fixed bug for when zipCode is not returned by geoLookup

--- a/webscraper/static/css/app.css
+++ b/webscraper/static/css/app.css
@@ -61,7 +61,7 @@ div.logo{
    background-repeat:no-repeat;
    background-size: 55% 100%;
 }
-div.scalable_map{
+div.responsive_map{
    width:60%;
    height:500px;
 }
