--- a/webscraper/templates/map.html
+++ b/webscraper/templates/map.html
@@ -57,7 +57,7 @@
    <br>
    <h4> Showing All Properties</h4>
 
-   <div class="scalable_map" id="map"> </div>
+   <div class="responsive_map" id="map"> </div>
 
    <script>
       function initMap() {
